Smaller H1s on mobile and fixed floated images at smaller screen sizes

--- a/search-and-go-child/css/style.css
+++ b/search-and-go-child/css/style.css
@@ -1,4 +1,3 @@
-@import url("../search-and-go/style.css");
 /*
 Theme Name: Ellsworth Chamber Search and Go
 Theme URI: http://searchandgo.elated-themes.com
@@ -7,6 +6,7 @@ Author:  Reach Maine
 Version: 1.0.0
 Template: search-and-go
 */
+@import url("../search-and-go/style.css");
 /* Colors ---------------------------------------------- */
 /* Typography ------------------------------------------ */
 /* General */
@@ -147,8 +147,8 @@ footer .eltd-footer-inner {
 .eltd-logo-wrapper {
   background-color: inherit !important; }
   .eltd-logo-wrapper a img {
-    -webkit-filter: drop-shadow(3px 3px 5px #333333);
-    filter: drop-shadow(3px 3px 5px #333333); }
+    -webkit-filter: drop-shadow(3px 3px 5px #333);
+    filter: drop-shadow(3px 3px 5px #333); }
 
 .eltd-blog-list-item-inner {
   padding: 13px;
@@ -304,9 +304,15 @@ ul.ecc_members_cats > li > a {
     width: 49%; } }
 @media only screen and (max-width: 600px) {
   .ecc-top-phone {
-    display: block; } }
+    display: block; }
+
+  h1 {
+    font-size: 22px; } }
 @media (max-width: 480px) {
   ul.ecc_members_cats ul.children li {
+    width: 100%; }
+
+  img.alignright, img.alignleft {
     width: 100%; } }
 @media (min-width: 481px) {
   .car-show-sponsors {
